--- a/src/index.css
+++ b/src/index.css
@@ -20,7 +20,7 @@ body {
   border-color: #CB857C;
   border-style: solid;
   border-width: 1px;
-  display: flex;
+  display: table;
   flex-direction: column;
   align-items: center;
   margin-left: 60px;
@@ -30,4 +30,17 @@ body {
   padding: 10px;
   right: 35%;
   left: 35%;
+}
+
+.btn {
+  background: #ffffff;
+  background-image: linear-gradient(left, #9C2D41, #CB857C) ;
+  border: none;
+  transition: all 0.3s ease;
+  overflow: hidden;
+  height:25px;
+  width: 80px;
+  border-radius: 10%;
+  align-self: center;
+  outline: none;
 }
