--- a/src/index.css
+++ b/src/index.css
@@ -27,20 +27,36 @@ body {
   margin-right: 60px;
   margin-top: 40px;
   position: absolute;
-  padding: 10px;
+  padding: 20px;
   right: 35%;
-  left: 35%;
+  left: 25%;
 }
 
 .btn {
-  background: #ffffff;
-  background-image: linear-gradient(left, #9C2D41, #CB857C) ;
-  border: none;
-  transition: all 0.3s ease;
-  overflow: hidden;
-  height:25px;
+  background-image: -webkit-linear-gradient(bottom, #9C2D41, #CB857C);
+  -webkit-border-radius: 60;
+  -moz-border-radius: 60;
+  border-radius: 10px;
+  color: #ffff;
+  height:35px;
   width: 80px;
-  border-radius: 10%;
   align-self: center;
-  outline: none;
+  border: none;
+  margin-top: 7px;
+}
+
+.result {
+  outline: 10px;
+  border-color: #CB857C;
+  border-style: solid;
+  border-width: 1px;
+  align-items: center;
+  flex-direction: column;
+  position: absolute;
+  margin-left: 60px;
+  margin-right: 60px;
+  margin-top: 40px;
+  padding: 10px;
+  right: auto;
+  left: 50%;
 }
